--- a/Android/OntworteldeBoom/app/src/main/res/layout-large-land/fragment_3.xml
+++ b/Android/OntworteldeBoom/app/src/main/res/layout-large-land/fragment_3.xml
@@ -32,77 +32,10 @@
         android:layout_toEndOf="@+id/textView30" />
 
     <TextView
-        android:id="@+id/textView31"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView30"
-        android:layout_alignBaseline="@+id/etdroogLevel1"
-        android:text="Drooglevel1:" />
-
-    <EditText
-        android:id="@+id/etdroogLevel1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="geef drooglevel1 in"
-        android:inputType="number"
-        android:layout_toEndOf="@+id/textView31"
-        android:layout_below="@+id/ettelNummer"
-        android:layout_alignStart="@+id/ettelNummer" />
-
-    <TextView
-        android:id="@+id/textView38"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/etdroogLevel1"
-        android:layout_toEndOf="@+id/etdroogLevel1"
-        android:layout_marginStart="20dp"
-        android:text = "onder deze waarde staat er te weinig water op de sensor. (0 - 1023)" />
-
-    <TextView
-        android:id="@+id/textView32"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView31"
-        android:layout_alignBaseline="@+id/etdroogLevel2"
-        android:text="Drooglevel2:" />
-
-    <EditText
-        android:id="@+id/etdroogLevel2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="geef drooglevel2 in"
-        android:inputType="number"
-        android:layout_toEndOf="@+id/textView32"
-        android:layout_below="@+id/etdroogLevel1"
-        android:layout_alignStart="@+id/ettelNummer" />
-
-    <TextView
-        android:id="@+id/textView33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView32"
-        android:layout_alignBaseline="@+id/etdroogLevel3"
-        android:text="Drooglevel3:" />
-
-    <EditText
-        android:id="@+id/etdroogLevel3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="geef drooglevel3 in"
-        android:inputType="number"
-        android:layout_toEndOf="@+id/textView33"
-        android:layout_below="@+id/etdroogLevel2"
-        android:layout_alignStart="@+id/ettelNummer" />
-
-    <TextView
         android:id="@+id/textView34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView33"
         android:layout_alignBaseline="@+id/etdroogTijd"
         android:text="Droogtijd:" />
 
@@ -112,81 +45,25 @@
         android:layout_height="wrap_content"
         android:hint="geef droogtijd in"
         android:inputType="number"
+        android:layout_below="@+id/ettelNummer"
         android:layout_toEndOf="@+id/textView34"
-        android:layout_below="@+id/etdroogLevel3"
         android:layout_alignStart="@+id/ettelNummer" />
 
     <TextView
+        android:id="@+id/textView38"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/etdroogTijd"
+        android:layout_alignBaseline="@+id/textView34"
         android:layout_toEndOf="@+id/etdroogTijd"
-        android:layout_marginStart="20dp"
-        android:layout_alignStart="@+id/textView38"
-        android:text = "tijd om druppelsensoren nat te laten worden. (in seconden. max 2 min)" />
-
-    <TextView
-        android:id="@+id/textView35"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView34"
-        android:layout_alignBaseline="@+id/etdruppelSpeling"
-        android:text="Druppelspeling:" />
-
-    <EditText
-        android:id="@+id/etdruppelSpeling"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="geef druppelspeling in"
-        android:inputType="number"
-        android:layout_toEndOf="@+id/textView35"
-        android:layout_below="@+id/etdroogTijd"
-        android:layout_alignStart="@+id/ettelNummer" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/etdruppelSpeling"
-        android:layout_toEndOf="@+id/etdruppelSpeling"
-        android:layout_marginStart="20dp"
-        android:layout_alignStart="@+id/textView38"
-        android:text = "toegestane verschil rond sensorgemiddelde. (0 - 100)" />
-
-    <TextView
-        android:id="@+id/textView36"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView35"
-        android:layout_alignBaseline="@+id/etsamples"
-        android:text="Samples:" />
-
-    <EditText
-        android:id="@+id/etsamples"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="geef aantal samples in"
-        android:inputType="number"
-        android:layout_toEndOf="@+id/textView36"
-        android:layout_below="@+id/etdruppelSpeling"
-        android:layout_alignStart="@+id/ettelNummer" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/etsamples"
-        android:layout_toEndOf="@+id/etsamples"
-        android:layout_marginStart="20dp"
-        android:layout_alignStart="@+id/textView38"
-        android:text = "aantal metingen om voortschrijdend gem. vast te stellen. (1 - 40) ARDUINO RESET volgt!" />
+        android:layout_marginStart="40dp"
+        android:text = "tijd om druppelsensor nat te laten worden. ( in seconden. Max 2 min.)"
+        />
 
     <TextView
         android:id="@+id/textView37"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView36"
         android:layout_alignBaseline="@+id/etvlotterDelay"
         android:text="Vlotterdelay:" />
 
@@ -196,8 +73,8 @@
         android:layout_height="wrap_content"
         android:hint="geef vlotterdelay in"
         android:inputType="number"
+        android:layout_below="@+id/etdroogTijd"
         android:layout_toEndOf="@+id/textView37"
-        android:layout_below="@+id/etsamples"
         android:layout_alignStart="@+id/ettelNummer" />
 
     <TextView
@@ -205,7 +82,6 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/etvlotterDelay"
         android:layout_toEndOf="@+id/etvlotterDelay"
-        android:layout_marginStart="20dp"
         android:layout_alignStart="@+id/textView38"
         android:text = "tijdsvertraging in laagwater om dender te voorkomen. ( in seconden. Max 2 min.)"
         android:id="@+id/textView" />
@@ -215,7 +91,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/cbxSMS"
-        android:layout_below="@+id/textView37"
         android:layout_alignBaseline="@+id/etdatum_tijd"
         android:text="datum en tijd:" />
 
@@ -226,6 +101,7 @@
         android:hint="datum en tijd"
         android:layout_toEndOf="@+id/textView39"
         android:layout_below="@+id/etvlotterDelay"
+        android:layout_marginTop="10dp"
         android:layout_alignStart="@+id/ettelNummer"
         android:focusable="false" />
 
