--- a/Android/OntworteldeBoom/app/src/main/res/layout-xlarge-land/fragment_1.xml
+++ b/Android/OntworteldeBoom/app/src/main/res/layout-xlarge-land/fragment_1.xml
@@ -233,7 +233,7 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:textSize="10sp"
         android:text="schijf:" />
 
@@ -243,8 +243,7 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:hint="schijf"
-        android:layout_alignLeft="@+id/tvBestand"
-        android:layout_toRightOf="@+id/textView5"
+        android:layout_alignStart="@+id/tvBestand"
         android:layout_toEndOf="@+id/textView5"
         android:layout_alignBottom="@+id/textView5" />
 
@@ -252,7 +251,7 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
         android:layout_below="@+id/textView5"
         android:textSize="10sp"
         android:text="bestand:" />
@@ -263,10 +262,8 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:hint="bestand"
-        android:layout_toRightOf="@+id/textView6"
         android:layout_toEndOf="@+id/textView6"
         android:layout_alignBottom="@+id/textView6"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp" />
 
     <TextView
@@ -274,8 +271,8 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:layout_toRightOf="@+id/textView5"
-        android:layout_marginLeft="120dp"
+        android:layout_toEndOf="@+id/textView5"
+        android:layout_marginStart="120dp"
         android:layout_alignBottom="@+id/textView5"
         android:text="stuur SMS:" />
 
@@ -284,9 +281,8 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:layout_toRightOf="@+id/textView10"
         android:layout_toEndOf="@+id/textView10"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_alignBottom="@+id/textView5"
         android:hint="SMS ja/nee" />
 
@@ -295,8 +291,8 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:layout_toRightOf="@+id/textView10"
-        android:layout_alignLeft="@+id/textView10"
+        android:layout_toEndOf="@+id/textView10"
+        android:layout_alignStart="@+id/textView10"
         android:layout_alignBottom="@+id/textView6"
         android:text="Telefoonnr:" />
 
@@ -305,9 +301,8 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:layout_toRightOf="@+id/textView11"
         android:layout_toEndOf="@+id/textView11"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_alignBottom="@+id/textView6"
         android:hint="nummer" />
 
@@ -316,8 +311,8 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:layout_marginRight="5dp"
-        android:layout_toLeftOf="@+id/tvADatum"
+        android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@+id/tvADatum"
         android:layout_alignBottom="@+id/textView5"
         android:text="Arduino datum:" />
 
@@ -327,8 +322,7 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_alignBottom="@+id/textView5"
         android:hint="datum" />
 
@@ -337,8 +331,8 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:layout_toLeftOf="@+id/tvATijd"
-        android:layout_alignLeft="@+id/textView13"
+        android:layout_toStartOf="@+id/tvATijd"
+        android:layout_alignStart="@+id/textView13"
         android:layout_alignBottom="@+id/textView6"
         android:text="Arduino tijd:" />
 
@@ -347,7 +341,7 @@ tools:context=".MainActivity$PlaceholderFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:layout_alignLeft="@+id/tvADatum"
+        android:layout_alignStart="@+id/tvADatum"
         android:layout_below="@+id/tvADatum"
         android:layout_alignBottom="@+id/textView6"
         android:hint="tijd" />
@@ -373,7 +367,7 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="Waterniveau :" />
 
         <TextView
@@ -382,8 +376,8 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView2"
             android:layout_alignBottom="@+id/textView2"
-            android:layout_marginLeft="19dp"
-            android:layout_toRightOf="@+id/textView2"
+            android:layout_marginStart="19dp"
+            android:layout_toEndOf="@+id/textView2"
             android:hint="niveau"
             android:textColor="#000" />
 
@@ -402,9 +396,9 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:background="#00000000"
-            android:layout_alignLeft="@id/pbDelay"
+            android:layout_alignStart="@id/pbDelay"
             android:layout_alignTop="@id/pbDelay"
-            android:layout_alignRight="@id/pbDelay"
+            android:layout_alignEnd="@id/pbDelay"
             android:layout_alignBottom="@id/pbDelay"
             android:visibility="invisible"
             android:gravity="center"
@@ -424,8 +418,8 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView4"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/textView4"
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@+id/textView4"
             android:hint="temperatuur"/>
 
         <TextView
@@ -442,8 +436,8 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView3"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/textView4"
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@+id/textView4"
             android:hint="humidity"/>
 
         <TextView
@@ -460,19 +454,9 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView7"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/textView4"
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@+id/textView4"
             android:hint="lux"/>
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView7"
-            android:layout_marginTop="10dp"
-            android:layout_alignLeft="@+id/tVLux"
-            android:textSize="10sp"
-            android:text="waarde"  />
 
         <TextView
             android:id="@+id/textView8"
@@ -484,76 +468,13 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:text="Sensor 1 :" />
 
         <TextView
-            android:id="@+id/tVSensor1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView8"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/textView4"
-            android:hint="sensor1"/>
-
-        <TextView
             android:id="@+id/tVDroog1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView8"
-            android:layout_marginLeft="120dp"
-            android:layout_toRightOf="@+id/textView8"
+            android:layout_alignStart="@id/tVLux"
+            android:layout_toEndOf="@+id/textView8"
             android:hint="droog1"/>
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView2"
-            android:layout_below="@+id/textView8"
-            android:layout_marginTop="15dp"
-            android:text="Sensor 2 :" />
-
-        <TextView
-            android:id="@+id/tVSensor2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView9"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/textView4"
-            android:hint="sensor2"/>
-
-        <TextView
-            android:id="@+id/tVDroog2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView9"
-            android:layout_marginLeft="120dp"
-            android:layout_toRightOf="@+id/textView9"
-            android:hint="droog2"/>
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView2"
-            android:layout_below="@+id/textView9"
-            android:layout_marginTop="15dp"
-            android:text="Sensor 3 :" />
-
-        <TextView
-            android:id="@+id/tVSensor3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView1"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/textView4"
-            android:hint="sensor3"/>
-
-        <TextView
-            android:id="@+id/tVDroog3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView1"
-            android:layout_marginLeft="120dp"
-            android:layout_toRightOf="@+id/textView1"
-            android:hint="droog3"/>
 
     </RelativeLayout>
 
@@ -569,7 +490,7 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="SMS status:" />
 
         <TextView
@@ -577,8 +498,8 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView40"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/textView40"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/textView40"
 
             android:hint="SMS status" />
 
@@ -588,7 +509,7 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView40"
             android:layout_marginTop="10dp"
-            android:layout_alignLeft="@+id/textView40"
+            android:layout_alignStart="@+id/textView40"
             android:text="SMS inhoud:" />
 
         <TextView
@@ -597,7 +518,7 @@ tools:context=".MainActivity$PlaceholderFragment">
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvSMSStatus"
             android:layout_marginTop="10dp"
-            android:layout_alignLeft="@+id/tvSMSStatus"
+            android:layout_alignStart="@+id/tvSMSStatus"
             android:hint="SMS bericht"/>
 
         <TextView
